@@ -1,7 +1,12 @@
 package com.CodeWithRishu.YojanaSetu.service;
 
+import com.CodeWithRishu.YojanaSetu.utils.Helper;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.ai.chat.client.ChatClient;
+import org.springframework.ai.chat.client.advisor.PromptChatMemoryAdvisor;
+import org.springframework.ai.chat.client.advisor.vectorstore.QuestionAnswerAdvisor;
+import org.springframework.ai.chat.memory.ChatMemory;
+import org.springframework.ai.chat.memory.MessageWindowChatMemory;
 import org.springframework.ai.document.Document;
 import org.springframework.ai.reader.pdf.PagePdfDocumentReader;
 import org.springframework.ai.transformer.splitter.TokenTextSplitter;
@@ -11,11 +16,11 @@ import org.springframework.ai.vectorstore.filter.FilterExpressionBuilder;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
+import reactor.core.publisher.Flux;
 
 import javax.annotation.PostConstruct;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -29,8 +34,16 @@ public class ChatService {
     private final ChatClient chatClient;
 
     public ChatService(ChatClient.Builder chatClientBuilder, VectorStore vectorStore) {
+        ChatMemory chatMemory = MessageWindowChatMemory.builder()
+                .maxMessages(5).build();
+
         this.vectorStore = vectorStore;
-        this.chatClient = chatClientBuilder.build();
+        this.chatClient = chatClientBuilder
+                .defaultAdvisors(
+                        PromptChatMemoryAdvisor.builder(chatMemory).build(),
+                        QuestionAnswerAdvisor.builder(vectorStore).build()
+                )
+                .build();
     }
 
     @PostConstruct
@@ -40,24 +53,23 @@ public class ChatService {
             return;
         }
 
-        var filterBuilder = new FilterExpressionBuilder();
-
         Arrays.stream(pdfResource)
                 .filter(r -> r.getFilename() != null && !r.getFilename().isEmpty())
                 .forEach(resource -> {
+                    var filterBuilder = new FilterExpressionBuilder();
                     String fileName = resource.getFilename();
 
-                    boolean alreadyLoaded = vectorStore.similaritySearch(
+                    List<Document> existing = vectorStore.similaritySearch(
                             SearchRequest.builder()
-                                    .query(".")
+                                    .query(fileName)
                                     .topK(1)
                                     .similarityThreshold(0.0d)
                                     .filterExpression(filterBuilder.eq("source", fileName).build())
                                     .build()
-                    ).stream().findAny().isPresent();
+                    );
 
-                    if (alreadyLoaded) {
-                        log.info("Scheme from {} already loaded, skipping.", fileName);
+                    if (!existing.isEmpty()) {
+                        log.info("Skipping this PDF: {}", fileName);
                         return;
                     }
 
@@ -65,51 +77,55 @@ public class ChatService {
                 });
     }
 
-    public String getRAGResponse(String userQuery) {
-        return Optional.ofNullable(userQuery)
-                .filter(query -> !query.trim().isEmpty())
-                .map(query -> {
-                    try {
-                        List<Document> docs = vectorStore.similaritySearch(
-                                SearchRequest.builder()
-                                        .query(query)
-                                        .topK(6)
-                                        .similarityThreshold(0.5d)
-                                        .build()
-                        );
+    public Flux<String> getRAGResponse(String userQuery) {
+        if (userQuery == null || userQuery.isBlank()) {
+            return Flux.just("Please provide a valid question.");
+        }
+        String query = userQuery.trim();
+        List<Document> docs;
+        try {
+            docs = vectorStore.similaritySearch(
+                    SearchRequest.builder()
+                            .query(query)
+                            .topK(6)
+                            .similarityThreshold(0.65d)
+                            .build()
+            );
+        } catch (Exception e) {
+            log.error("Vector store search failed for query: {}", query, e);
+            return Flux.just("I'm having trouble searching the knowledge base. Please try again.");
+        }
 
-                        String context = docs.stream()
-                                .map(Document::getFormattedContent)
-                                .collect(Collectors.joining("\n\n"));
+        if (docs.isEmpty())
+            return Flux.just("I couldn't find relevant information. Please try rephrasing your question.");
 
-                        if (context.isEmpty()) {
-                            return "I couldn't find relevant information. Please try rephrasing your question.";
-                        }
+        String context = docs.stream()
+                .map(Document::getFormattedContent)
+                .collect(Collectors.joining("\n\n"));
 
-                        String response = chatClient.prompt()
-                                .system(ChatService.systemPrompt)
-                                .user(context + "\n\nQUESTION: " + query)
-                                .call()
-                                .content();
-
-                        return Optional.ofNullable(response)
-                                .map(r -> r.replaceAll("\\n\\* ", "\n- "))
-                                .map(r -> r.replaceAll("^\\* ", "- "))
-                                .orElse("क्षमा करें, कोई जवाब नहीं मिला। / Sorry, no response received.");
-
-                    } catch (Exception e) {
-                        log.error("Error processing query: {}", query, e);
-                        return "I'm having trouble processing your request. Please try again.";
-                    }
-                })
-                .orElse("Please provide a valid question.");
+        try {
+            return chatClient.prompt()
+                    .system(Helper.systemPrompt)
+                    .user("Context:\n" + context + "\n\nQuestion: " + query)
+                    .stream()
+                    .content();
+        } catch (Exception e) {
+            log.error("Chat client failed for query: {}", query, e);
+            return Flux.just("I'm having trouble generating a response. Please try again.");
+        }
     }
 
     private void loadSinglePdfDocs(Resource resource) {
         try {
             var reader = new PagePdfDocumentReader(resource);
-            var docs = new TokenTextSplitter()
-                    .split(reader.get());
+            var splitter = TokenTextSplitter.builder()
+                    .withChunkSize(512)
+                    .withMinChunkSizeChars(100)
+                    .withMinChunkLengthToEmbed(100)
+                    .withKeepSeparator(true)
+                    .build();
+
+            var docs = splitter.split(reader.get());
             docs.forEach(doc -> doc.getMetadata().put("source", resource.getFilename()));
             vectorStore.add(docs);
             log.info("Loaded: {} {} pages", resource.getFilename(), docs.size());
@@ -117,38 +133,4 @@ public class ChatService {
             log.error("Failed to load PDF: {}", resource.getFilename(), e);
         }
     }
-
-    private static final String systemPrompt = """
-            You are Yojana-Setu, a helpful government scheme assistant.
-            
-            RULES:
-            1. RESPOND IN THE SAME LANGUAGE as the user's question
-            2. Use SIMPLE words (avoid complex terminology)
-            3. Use SHORT SENTENCES (max 15 words per sentence)
-            4. Use DASHES (-) for bullet points, NEVER asterisks (*)
-            5. Add emojis for visual appeal
-            6. End with source: "स्रोत: [PDF Name]" (in Hindi) or "Source: [PDF Name]" (in English)
-            7. If no info available, say so politely in user's language
-            
-            FORMAT:
-            **Scheme Name / योजना नाम**
-            Eligibility / पात्रता:
-            - [point 1]
-            - [point 2]
-            - [point 3]
-            
-            Benefits / लाभ:
-            - [point 1]
-            - [point 2]
-            - [point 3]
-            
-            Application / आवेदन:
-            - [how to apply]
-            
-            Source/स्रोत: [PDF]
-            
-            CRITICAL:
-            - Detect user's language (Hindi/English/Hinglish) and respond in that language
-            - Use dash (-) for lists, NOT asterisk (*)
-            """;
 }
